--- a/src/component/Item/Global.css
+++ b/src/component/Item/Global.css
@@ -157,3 +157,12 @@ span {
 .cart {
     width: 2rem;
 }
+
+/* banner two img  */
+.bannner-img{
+    width: 100%;
+    height: 80vh;
+}
+.bg{
+    background-color: #F1EEF7;
+}
